--- a/src/App.css
+++ b/src/App.css
@@ -12,15 +12,24 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 transition: all 0.2s;
+z-index: 10;
 
 }
+
+.main-div{
+  margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    }
 
 .layout{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-height: 100%;
+  height: 100%;
 }
 
 h1{
@@ -36,4 +45,36 @@ margin-bottom: 30px;
 .cards-wrapper{
 display:flex;
 flex-direction: column;
+}
+
+.form-body{
+position: relative;}
+
+.close-btn{
+  position:absolute;
+top: 0px;
+trandition: .2s;
+transform: rotate(45deg);
+font-size:25px;
+color: #fff;
+right: 10px;
+opacity: 1;
+cursor: pointer;
+user-select: none;
+}
+.close-btn:hover{
+opacity: .4;
+}
+
+
+.opaque-bg{
+  position:absolute;
+  width:100%;
+  height:100vh;
+top: 0;
+right: 0;
+opacity: .8;
+trandition: .2s;
+background: #000;
+z-index: 5;
 }
